--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@newrelic/browser-agent": "^1.249.0",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
+    "express": "^4.21.0",
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
